--- a/src/index.scss
+++ b/src/index.scss
@@ -26183,6 +26183,10 @@ form.contact-form-1 .single-select select,select {
     background: #fff;
     padding: 15px
 }
-
+img.full-width {
+    width: 100%;
+    height: auto;
+    object-fit: cover
+}
 
 
