--- a/src/index.scss
+++ b/src/index.scss
@@ -16382,7 +16382,8 @@ li.with-megamenu:hover .rts-megamenu {
 }
 
 .rts-banner-area-one {
-    position: relative
+    position: relative;
+    height:350px;
 }
 
 .rts-banner-area-one .swiper-button-next,
