--- a/src/index.scss
+++ b/src/index.scss
@@ -26185,7 +26185,7 @@ form.contact-form-1 .single-select select,select {
 }
 img.full-width {
     width: 100%;
-    height: auto;
+    height: 312px;
     object-fit: cover
 }
 
